fix subpixel rendering problem on chrome play sounds overlapping

--- a/backend/app/static/styles/dice.css
+++ b/backend/app/static/styles/dice.css
@@ -558,6 +558,8 @@ body {
   height: 50px;
   perspective: 200px;
   margin: 2px auto;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
 }
 
 .dice-3d-cube {
@@ -566,14 +568,15 @@ body {
   position: relative;
   transform-style: preserve-3d;
   -webkit-transform-style: preserve-3d;
+  will-change: transform;
 }
 
 .dice-3d-cube .dice {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  top: -0.5px;
+  left: -0.5px;
+  width: calc(100% + 1px);
+  height: calc(100% + 1px);
   margin: 0;
   box-sizing: border-box;
   backface-visibility: hidden;
